base/src/test/resources/failure/operator/ambiguous.aya.txt
In file $FILE:4:13 ->

  2 | def infix = : Type => =
  3 | 
  4 | def fail : 1 + 1 = 2 => fail
                   ^^

Error: Ambiguous operator precedence detected between `=` and `+`
note: Use `bind` statement or insert parentheses to make it clear.

In file $FILE:1:10 ->

  1 | def infix + : Type => +
                ^^
  2 | def infix = : Type => =
  3 | 

Error: The definition `+` does not terminate

In file $FILE:2:10 ->

  1 | def infix + : Type => +
  2 | def infix = : Type => =
                ^^
  3 | 

Error: The definition `=` does not terminate

3 error(s), 0 warning(s).
What are you doing?
